# Mandelbrot

./: CMakeLists.txt  MandelbrotSetGPU.sln  MandelbrotSetGPU.vcxproj  MandelbrotSetGPU.vcxproj.filters  README.md  TODO  coloring.cu  coloring.cuh  main.cpp  main.cu  mandelbrot_set.cu  mandelbrot_set.cuh
.github/workflows/: cmake-windows.yml
data/: bookmarks.json  config.json
include/: application_glfw.h  coloring.cuh  complex.h  explorer.h  fps_counter.h  image.h  mandelbrot_renderer_glfw.h  mandelbrot_set.cuh
include/application/: actions.h  application.h  application_glfw.h  buttons.h  config.h  explorer.h  fps_counter.h  logger.h  mandelbrot_renderer.h  mandelbrot_renderer_glfw.h  screenshot_manager.h  screenshot_renderer.h
include/application/mandelbrot/application/: actions.h  application.h  application_glfw.h  bookmarks.h  buttons.h  config.h  explorer.h  fps_counter.h  logger.h  mandelbrot_renderer.h  mandelbrot_renderer_glfw.h  screenshot_renderer.h  window_mode.h
include/core/: coloring_mode.h  complex.h  defines.cuh  gpu_memory_pool.h  image.h  long_float.cuh  point.h  size.h  utils.h
include/core/mandelbrot/core/: coloring_mode.h  complex.h  gpu_memory_pool.h  image.h  palette.h  point.h  render_options.h  size.h  typedefs.h  utils.h
include/core/mandelbrot/core/cuda/: color.cu  color.h  coloring.h  defines.h  mandelbrot_set.h  palettes.h
src/: application_glfw.cpp  coloring.cu  explorer.cpp  image.cpp  main.cpp  mandelbrot_set.cu
src/application/: application.cpp  application_glfw.cpp  bookmarks.cpp  config.cpp  explorer.cpp  fps_counter.cpp  logger.cpp  main.cpp  mandelbrot_renderer.cpp  mandelbrot_renderer_glfw.cpp  screenshot_manager.cpp  screenshot_renderer.cpp
src/benchmarks/: benchmarks.cpp
src/core/: coloring.cu  complex.cpp  gpu_memory_pool.cpp  image.cpp  long_float.cu  mandelbrot_set.cu  point.cpp  render_options.cpp  size.cpp  utils.cpp
src/core/cuda/: coloring.cu  gpu_memory_pool.cpp  mandelbrot_set.cu
src/tests/: tests.cpp
